# hefeikunyuan-price

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  reprocess_images.py  reprocess_images_minimax.py  requirements-ocr.txt  retry_failed.py  test_cdp_connection.py  test_login.py  test_minimax_vision.py  test_ocr_compare.py  test_paddleocr.py  test_paddleocr_job.py  test_retry.py  修复计划.md
archive/one_off_scripts/: README.md
doc/: 库存颜色标注代码架构.md  线下报价识别与库存标注标准流程.md  项目运行流程_文本版.txt  项目运行流程图.md
ocr_price/: __init__.py  audit.py  cli.py  env_loader.py  events.py  inventory.py  inventory_color.py  manifest.py  minimax_vision.py  offline_validation.py  paddle_api.py  parser.py  pipeline.py  reporting.py  rules.py  semantic_adjustment.py  web_price.py  writeback_image_doc.py  xlsx_utils.py
skills/quote-update/: SKILL.md  指令模板.md
tests/: test_agent_prompt_script.py  test_apply_confirmations.py  test_audit.py  test_events.py  test_image_doc_mapping_aliases.py  test_inventory_writeback.py  test_location_parse.py  test_manifest_guard.py  test_minimax_conversion.py  test_minimax_replay.py  test_offline_price_deviation.py  test_offline_validation.py  test_one_sentence_instructions.py  test_pipeline_artifact_apply.py  test_pipeline_safety.py  test_project_metadata_docs.py  test_reporting.py  test_rules_contract.py  test_semantic_supplement_adjustment.py  test_web_price_interactive_login.py
tests/fixtures/: minimax_vlm_response_xugang.json
线下报价/: 淮南宏泰报价补充.txt  长江报价补充.txt  闽源报价.txt
项目报价/: 安徽合肥-安徽蚌埠-蚌投(春和苑）询价表2026.4.24.xlsx
(+20 files in other folders)
